--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 5px;
 }
 
 .alertaCampoVazio {
@@ -82,6 +81,21 @@ body {
     cursor: pointer;
     border-radius: 5px;
     font-size: 16px;
+}
+
+.dv-btns-screen {
+    width: 100%;
+    text-align: end;
+    position: relative;
+}
+
+.btn-screen {
+    padding: 4px;
+    border-radius: 6px;
+    font-size: 20px;
+    min-width: 10%;
+    cursor: pointer;
+    background-color: rgba(233, 233, 218, 0.486);
 }
 
 #add-tarefas {
