--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,21 @@
-*{margin: 0;padding: 0;box-sizing: border-box; font-family: 'Roboto Condensed', sans-serif;}
+* {margin: 0;padding: 0;box-sizing: border-box;}
 
 body {
     height: 100vh;
-    background: url(../imgs/wood.jpg) no-repeat center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.alertaCampoVazio {
-    width: 100%;
-    background-color: red;
-    text-align: center;
-    padding: 6px;
-    position: relative;
-}
-
-.dv-barra {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-}
-
-.barra {
-    width: 1%;
-    height: 100%;
-    background-color: blue;
-}
-
-.animacao-barra {
-    animation: barraLoading 5000ms forwards;
-}
-
-@keyframes barraLoading {
-    to{width: 100%;}
-}
-
-.esconder {
-    display: none;
-}
-
-.imgCheck {
-    width: 100px;
-    height: 100px;
-}
-
-#todo-list {
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 20px;
-    background-color: rgba(233, 233, 218, 0.486);
-}
-
-.container {
     display: flex;
     justify-content: center;
-    width: 100%;
-}
-
-#input-tarefa {
-    width: 80%;
-    height: 30px;
-    font-size: 17px;
-    padding: 0 4px;
-    border-radius: 5px;
-    background-color: rgba(240, 233, 233, 0.486);
-}
-
-#btn-add {
-    height: 30px;
-    padding: 2px 5px;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.dv-btns-screen {
-    width: 100%;
-    text-align: end;
-    margin-bottom: 10px;
-}
-
-.btn-screen {
-    padding: 4px;
-    border-radius: 6px;
-    font-size: 20px;
-    min-width: 10%;
-    cursor: pointer;
-    background-color: rgba(233, 233, 218, 0.486);
-}
-
-#add-tarefas {
-    width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
     align-items: center;
-    row-gap: 5px;
+    background: url("../imgs/wood.jpg")no-repeat center/cover;
 }
 
-#container {
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    width: 50%;
-    max-height: 300px;
-    min-height: 60px;
-    background-color: rgba(233, 233, 218, 0.486);
-    overflow-y: auto;
+button {
+    display: grid;
+    place-items: center;
 }
 
-.tarefa {
-    border: 1px solid black;
-    border-radius: 6px;
-    background-color:rgb(233, 233, 218);
-    color: black;
-    padding: 10px;
-    width: 100%;
-    position: relative;
-}
-.tarefa p {
-    word-wrap: break-word;
-    text-align: justify;
-    font-size: 18px;
-    color: black;
-}
-
-.btn-remove, .btn-concluido, .btn-editar {
-    float: right;
-    margin-left: 6px;
-    border-radius: 100%;
-    padding: 1px 5px;
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-}
-.btn-remove:hover, .btn-concluido:hover, .btn-editar:hover {
-    background-color: rgba(214, 200, 200, 0.24);
-}
-
-.tarefa-concluida {
-    color: rgb(197, 7, 7);
-}
-
-.dv-editar {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.btn-salvar {
-    color: green;
-    padding: 0 12px;
-    font-size: 14px;
-    font-weight: bolder;
-    height: 30px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.btn-cancelar-edicao {
-    padding: 0 12px;
-    font-size: 16px;
-    height: 30px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.input-edit {
-    height: 22px;
-    width: 80%;
-    height: 30px;
-    border-radius: 5px;
-    padding: 0 4px;
-    font-size: 17px;
+.wapper {
+    padding: 1rem;
+    width: 50rem;
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.425);
 }
