--- a/css/formEdit.css
+++ b/css/formEdit.css
@@ -3,7 +3,7 @@
     border-radius: 1rem;
     padding: 10px;
     width: 100%;
-    height: 100%;
+    height: 18rem;
     display: none;
     place-items: center;
     position: absolute;
